syntax = "proto2";

package messages;

option java_package = "dev.fanchao.mymeet.proto";

message ClientMessage {
  optional string from_user = 1;

  oneof content {
    GroupStateUpdate state_update = 2;
    string offer = 3;
    string answer = 4;
    IceCandidate ice_candidate = 5;
  }
}

message MemberState {
  required string name = 1;
}

message GroupStateUpdate {
  map<string, MemberState> members = 1;
}

message IceCandidate {
  required string candidate = 2;
  required int32 sdp_mline_index = 3;
  optional string sdp_mid = 4;
}

message Command {
  optional string to_user = 1;

  oneof content {
    string offer = 2;
    string answer = 3;
    IceCandidate ice_candidate = 4;
  }
}
